--- a/functions/package.json
+++ b/functions/package.json
@@ -3,8 +3,9 @@
   "description": "Cloud Functions for Firebase",
   "dependencies": {
     "@google-cloud/bigquery": "^0.10.0",
-    "firebase-admin": "~5.4.0",
-    "firebase-functions": "^0.7.0",
+    "cmmc-parsers": "0.0.19",
+    "firebase-admin": "^5.4.3",
+    "firebase-functions": "^0.7.5",
     "moment": "^2.19.1",
     "moment-timezone": "^0.5.13"
   },
